# BioSimulation2022

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Introduction.rst  conf.py  index.rst  modules.rst  usage.rst
reference_examples/: check_sim.py  mono_hc.py  mono_ho.py  sample_sim.py
src/biosim/: __init__.py  animal.py  island.py  landscape.py  simulation.py  visualisation.py
tests/: test_animal.py  test_biosim_interface.py  test_island.py  test_landscape.py
